# rust-inference

./: .gitignore  Cargo.toml  README.md
src/: attention.rs  chat_template.rs  gguf.rs  gpu_backend.rs  kv_cache.rs  main.rs  math.rs  mlp.rs  model.rs  quant.rs  rmsnorm.rs  rope.rs  sampler.rs  tensor.rs  tokenizer.rs  transformer.rs
